[package]
name = "rust_crawler"
version = "0.1.0"
authors = ["Minsu Han <mshanobject@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["json", "blocking"] }
select = "0.5.0"
rayon = "1.5.0"
